# ascii-art

./: CMakeLists.txt  Doxyfile  Makefile  README.md  TODO.md
assets/: grayscale10.txt
src/: enums.h  main.cpp  test.cpp
src/classes/: GUI.cpp  GUI.h  Windows.cpp  Windows.h
src/classes/Controller/: Controller.cpp  Controller.h
src/classes/Image/: Image.cpp  Image.h  ImageAdjustments.cpp  ImageAdjustments.h
src/classes/Image/formats/: ImageJPG.cpp  ImageJPG.h  ImagePNG.cpp  ImagePNG.h
src/classes/Scene/: Scene.cpp  Scene.h  SceneGallery.cpp  SceneGallery.h  SceneImageDelete.cpp  SceneImageDelete.h  SceneImageEdit.cpp  SceneImageEdit.h  SceneImageUpload.cpp  SceneImageUpload.h  SceneStart.cpp  SceneStart.h
src/classes/abstract/: Bitmap.h  Vector.h
